# katalis

./: .gitignore  CRAFTING.md  Cargo.toml  LICENSE  MISSING_ASSETS.md  Makefile  PROGRESSION_GUIDE.md  README.md  TECH_TREE_DESIGN.md  kryon.toml  shell.nix
include/: game.h  game_constants.h
include/voxel/: biome.h  block.h  block_human.h  chunk.h  chunk_worker.h  crafting.h  entity.h  inventory.h  inventory_input.h  inventory_ui.h  item.h  light.h  minimap.h  network.h  player.h  sheep.h  sky.h  terrain.h  texture_atlas.h  tree.h  world.h
include/voxel/core/: block.h  item.h  texture_atlas.h
include/voxel/entity/: block_human.h  collision.h  entity.h  entity_utils.h  pig.h  sheep.h  tree.h
include/voxel/inventory/: crafting.h  inventory.h  inventory_input.h  inventory_ui.h
include/voxel/network/: network.h  serialization.h
shaders/: block.fs  block.vs  particle.fs  particle.vs  sky.fs  sky.vs
src/: animation.rs  assets.rs  camera.rs  crafting.rs  game.c  input.rs  main.c  main.rs  player.rs  progression.rs  render.rs  tech_tree.rs  types.rs  ui.rs  world.rs
src/types/: animals.rs  mod.rs  resources.rs  terrain.rs  time.rs  tools.rs  trees.rs
src/ui/: building.rs  common.rs  crafting_queue.rs  inventory.rs  inventory_layout.rs  mod.rs  pause_menu.rs  progression.rs  tech_tree.rs
src/voxel/: biome.c  block.c  block_human.c  chunk.c  chunk_worker.c  crafting.c  entity.c  inventory.c  inventory_input.c  inventory_ui.c  item.c  light.c  minimap.c  network.c  noise.c  pause_menu.c  player.c  sheep.c  sky.c  terrain.c  texture_atlas.c  tree.c  world.c
(+51 files in other folders)
