[package]
name = "katalis"
version = "0.1.0"
edition = "2021"

[dependencies]
raylib = "5.5.1"
serde = { version = "1.0", features = ["derive"] }
noise = "0.8"
rand = "0.8"

[profile.dev]
opt-level = 1  # Slightly optimize debug builds for better performance

[profile.release]
lto = true
codegen-units = 1
panic = "abort"